# leetcode

leetcode_1/: lc_1.c
leetcode_13_c/: CMakeLists.txt  lc_13.c  lc_13.h  test_lc_13.c
leetcode_1_c/: CMakeLists.txt
leetcode_1_python/: leetcode_1.py  leetcode_1_test.py
leetcode_2_c/: CMakeLists.txt  lc_2.c  lc_2.h  lc_2_test.c
leetcode_2_python/: leetcode_2.py
leetcode_9_c/: CMakeLists.txt  lc_9.c  lc_9.h  lc_9_test.c
